--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,6 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
@@ -24,4 +17,11 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+ul,
+li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
