--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,8 +1,15 @@
 .home-layout {
+  position: relative;
+
   display: flex;
   flex-direction: row;
 
+  @media screen and (max-width: 1360px) {
+    flex-direction: column-reverse;
+  }
+
   > div {
     flex: 1;
+    min-width: 680px;
   }
 }
