--- a/src/app/about/page.css
+++ b/src/app/about/page.css
@@ -1,7 +1,7 @@
 .container {
   background-color: red;
   height: calc(100vh - 80px);
-  width: 100%;
+  max-width: 100vw;
 }
 .sampleImage {
   position: absolute;
