feat: enhance ChallengeDetailCard layout and styling with mission details and improve ChallengeCard cursor

--- a/src/components/home/Challenge/ChallengeDetailCard.css
+++ b/src/components/home/Challenge/ChallengeDetailCard.css
@@ -3,4 +3,37 @@
 
   overflow: hidden;
   transition: max-height 0.3s ease;
+
+  .mission {
+    .mission-title {
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    .mission-description {
+      font-size: 1rem;
+      font-weight: 400;
+    }
+
+    .mission-list {
+      .mission-item {
+        display: flex;
+        flex-direction: row;
+
+        align-items: flex-end;
+
+        gap: 16px;
+
+        font-size: 1rem;
+        font-weight: 400;
+
+        .mission-item-title {
+          line-height: 150%;
+        }
+
+        .mission-item-address {
+          font-size: 0.875rem;
+        }
+      }
+    }
+  }
 }
