--- a/src/app/about/page.css
+++ b/src/app/about/page.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: red;
+  background-color: rgba(190, 51, 249, 0.374);
   height: calc(100vh - 80px);
   max-width: 100vw;
 }
