feat: refactor mission page layout and enhance MissionCard component

--- a/src/app/challenge/page.css
+++ b/src/app/challenge/page.css
@@ -1,18 +1,22 @@
-.container {
+.mission-page {
   background-color: rgba(190, 51, 249, 0.374);
   height: calc(100vh - 80px);
   max-width: 100vw;
-}
-.sampleImage {
-  position: absolute;
-  height: calc(100vh - 80px);
-  top: 50%;
-  left: 22%;
-}
-.textBox {
-  position: absolute;
-  height: calc(100vh - 80px);
-  top: 36%;
-  left: 45%;
-  border-color: black;
+  .container {
+  }
+
+  .sampleImage {
+    position: absolute;
+    height: calc(100vh - 80px);
+    top: 50%;
+    left: 22%;
+  }
+
+  .textBox {
+    position: absolute;
+    height: calc(100vh - 80px);
+    top: 36%;
+    left: 45%;
+    border-color: black;
+  }
 }
