feat: update SeoulMap styles and enhance address display in popup

--- a/src/components/home/GeoMap/SeoulMap.css
+++ b/src/components/home/GeoMap/SeoulMap.css
@@ -1,8 +1,8 @@
 .seoul-map-layout {
   .seoul-map-sticky {
     position: sticky;
-    /* TODO: nav바 영역 빼기 */
-    top: calc(0px);
+
+    top: 168px;
 
     .seoul-map-container {
       position: relative;
