--- a/src/components/mission/MissionCard.css
+++ b/src/components/mission/MissionCard.css
@@ -1,25 +1,81 @@
-.mission-card-title {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-
-  padding: 16px 0;
-
-  justify-content: center;
-  align-items: center;
-}
-
-.main-image {
-  position: absolute;
+.mission-page {
+  background-color: rgba(190, 51, 249, 0.374);
   height: calc(100vh - 80px);
-  top: 50%;
-  left: 22%;
-}
+  max-width: 100vw;
 
-.text-box {
-  position: absolute;
-  height: calc(100vh - 80px);
-  top: 36%;
-  left: 45%;
-  border-color: black;
+  .mission-card-title {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    padding: 16px 0;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-image {
+    position: absolute;
+    height: calc(100vh - 80px);
+  }
+
+  .text-box {
+    position: absolute;
+    height: calc(100vh - 80px);
+    top: 36%;
+    left: 45%;
+
+    .balloon {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 558px;
+      height: 358px;
+    }
+
+    .mission-open-card {
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 558px;
+      height: 358px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+
+    .main-image,
+    .text-box {
+      position: relative;
+      top: unset;
+      left: unset;
+      height: auto;
+    }
+
+    .main-image {
+      width: 80%;
+    }
+
+    .text-box .balloon {
+      display: none;
+    }
+
+    .text-box .mission-open-card {
+      width: 100vw;
+      height: auto;
+
+      margin-top: 24px;
+      padding: 8px;
+      box-sizing: border-box;
+
+      background-color: white;
+    }
+  }
 }
