--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,6 +15,15 @@
     font-weight: 600;
     line-height: 150%;
 
+    @media screen and (max-width: 1024px) {
+      font-size: 1rem;
+
+      .nav-logo {
+        width: 50%;
+        height: 50%;
+      }
+    }
+
     .navbar-leftside {
       display: flex;
       flex-direction: row;
