--- a/src/components/mission/MissionCard.css
+++ b/src/components/mission/MissionCard.css
@@ -3,6 +3,10 @@
   height: calc(100vh - 80px);
   max-width: 100vw;
 
+  display: flex;
+
+  flex-direction: column;
+
   .mission-card-title {
     display: flex;
     flex-direction: column;
