--- a/src/components/write/setModal.css
+++ b/src/components/write/setModal.css
@@ -8,7 +8,12 @@
   font-size: 15px;
   font-weight: 300;
 }
-.textfield {
+.note {
+  font-size: 20px;
+  font-weight: 500;
+}
+.textArea {
   display: flex;
+  flex-direction: column;
   width: 50%;
 }
