feat: enhance board API integration and improve ReviewCard component with dynamic data fetching

--- a/src/components/review-card/ReviewCard.css
+++ b/src/components/review-card/ReviewCard.css
@@ -1,6 +1,6 @@
 .reviewBox {
-  background-color: bisque;
-  border-radius: 5%;
+  background-color: #ffeded;
+  border-radius: 12px;
   display: flex;
   flex-direction: row;
   padding: 30px;
