--- a/src/app/challen-log/challen-log.css
+++ b/src/app/challen-log/challen-log.css
@@ -1,6 +1,12 @@
 .challen-log-container {
   display: flex;
   flex-direction: row;
+  gap: 24px;
+
+  @media screen and (max-width: 1024px) {
+    flex-direction: column;
+  }
+
   .logCard {
     padding: 10px;
     border-radius: 20px;
