feat: center align ChallenLog layout and update ReviewCard to use a div for improved semantics

--- a/src/app/challen-log/challen-log.css
+++ b/src/app/challen-log/challen-log.css
@@ -3,6 +3,8 @@
   flex-direction: row;
   gap: 24px;
 
+  justify-content: center;
+
   @media screen and (max-width: 1024px) {
     flex-direction: column;
   }
