--- a/src/components/review-card/ReviewCard.css
+++ b/src/components/review-card/ReviewCard.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   padding: 30px;
-  width: fit-content;
+  width: 100%;
 }
 .review-photo {
   border-radius: 15px;
